# rpredict_indexer

./: .gitignore  Cargo.toml  README.MD  config.toml  example_config.toml
core/: Cargo.toml
core/src/: types.rs  ui.rs
core/src/api/: gamma.rs  index.rs  mod.rs  platform.rs  questions.rs
core/src/api/manifold/: manifold_api.rs
core/src/api/metaculus/: metaculus_api.rs  mod.rs
core/src/api/polymarket/: mod.rs  polymarket_api.rs
core/src/api/polymarket/utils/: auth.rs  math.rs
core/src/db/model/: index.rs  mod.rs  simplebroker.rs
core/src/db/model/polymarket/: mod.rs  polymarket_account.rs  polymarket_market.rs
core/src/executor/: executor.rs
core/src/plugins/: mod.rs
core/src/src/: context.rs  main.rs
core/src/src/admin/: listener.rs
core/src/src/api/: schema.rs
core/src/src/api/manifold/: mod.rs
core/src/src/api/manifold/utils/: order.rs
core/src/src/api/polymarket/utils/: mod.rs  order.rs
core/src/src/collector/: market_collector.rs  mod.rs  news_collector.rs
core/src/src/commands/: commands.rs
core/src/src/db/: error.rs  graphql.rs  mod.rs
core/src/src/db/model/: manifold.rs  question.rs
core/src/src/strategies/: arb.rs  mod.rs
core/src/src/web/: index.rs
core/src/utils/: math.rs
core/src/web/: metaculus_index.rs  mod.rs
scripts/: Cargo.toml
scripts/src/: cli.rs  main.rs
scripts/src/commands/: command.rs
src/: context.rs  executor.rs  main.rs  types.rs  ui.rs
src/admin/: listener.rs
src/api/: gamma.rs  index.rs  manifold.rs  metaculus.rs  mod.rs  platform.rs  polymarket.rs  schema.rs
src/api/manifold/: manifold_api.rs  mod.rs
src/api/manifold/utils/: auth.rs  mod.rs  order.rs
src/api/metaculus/: metaculus_api.rs
src/api/polymarket/: polymarket_api.rs
src/api/polymarket/utils/: auth.rs  order.rs
src/collector/: manifold_collector.rs  market_collector.rs  mod.rs  news_collector.rs
src/commands/: commands.rs  mod.rs
src/db/: mod.rs
src/db/model/: gamma.rs  index.rs  manifold.rs  metaculus.rs  mod.rs  polymarket.rs  question.rs
src/executor/: executor.rs
src/plugins/: qdrant.rs
src/strategies/: arb.rs  mod.rs
src/utils/: mod.rs
src/web/: index.rs
