[package]
name = "rpredict_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.9"
async-graphql-axum = "7.0.9"
async-trait = "0.1.83"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["query"] }
axum-server = "0.7.1"
futures-channel = "0.3.30"
futures-util = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["full"] }
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
slab = { version = "0.4.9", features = ["serde"] }
sled = "0.34.7"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
