[package]
name = "rpredict_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.6.4", features = ["full"] }
ansi_term = { version = "0.12.1", features = ["derive_serde_style", "serde"] }
anyhow = "1.0.92"
async-graphql = "7.0.9"
async-graphql-axum = "7.0.9"
async-openai = { version = "0.25.0", features = ["realtime"] }
async-trait = "0.1.83"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["query"] }
axum-server = "0.7.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["cargo", "derive"] }
crossterm = "0.28.1"
diesel = { version = "2.2.4", features = ["chrono", "postgres", "serde_json"] }
futures-channel = "0.3.30"
futures-util = "0.3.30"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["full"] }
jsonrpsee = { version = "0.24.7", features = ["async-client", "http-client"] }
once_cell = "1.19.0"
ort = "1.16.3"
qdrant-client = "1.12.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.7", features = ["json"] }
reqwest-leaky-bucket = "0.2.0"
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
slab = { version = "0.4.9", features = ["serde"] }
sled = "0.34.7"
sqlx = "0.8.2"
tavily = "1.0.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tokio-tungstenite = "0.24.0"
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
